--- a/Aula1Python.ipynb
+++ b/Aula1Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Aula1Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM5nceVosFQloMuosDA/SV8",
+      "authorship_tag": "ABX9TyNoW+6hS9FpHlNgItf9pUcn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,20 +64,7 @@
         "nome= \"Lucas\"\n",
         "cargo = 'Analista'"
       ],
-      "execution_count": 40,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-rVobx32h7vL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 40,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -89,7 +76,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "b37b8c8d-15e3-4083-fea1-a73d05408640"
+        "outputId": "ae6c1968-b5dc-4e1f-e561-9093438e84d2"
       },
       "source": [
         "somasalarios = salario1 + salario2\n",
@@ -101,7 +88,7 @@
         "print(str(somadesalarioAlternativo))\n",
         "print(concatenarStrings)"
       ],
-      "execution_count": 41,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,14 +111,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a38d9322-5362-4fc2-a1ba-714adf70c4c1"
+        "outputId": "17cb6020-4f4e-4b85-d090-d40778c650ba"
       },
       "source": [
         "variavelteste='10.1'\n",
         "soma = float(variavelteste) + x\n",
         "soma"
       ],
-      "execution_count": 42,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +130,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 3
         }
       ]
     },
@@ -156,12 +143,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "1de35175-3d35-4729-ed50-f88c00e269ba"
+        "outputId": "eab0c7f2-8f1d-4d28-8f22-e1c2adb160a9"
       },
       "source": [
         "print('Formatando a impressão\\nNome do servidor: {}\\nCargo: {}\\nSalario: {}'.format(nome1,cargo1,salario1))"
       ],
-      "execution_count": 43,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +183,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "c8a53c3a-59fd-48be-886c-db62859519e9"
+        "outputId": "c0cdef3f-c48a-4de4-ae05-c5cd24a5bd8d"
       },
       "source": [
         "listavazia = []\n",
@@ -208,7 +195,7 @@
         "print(lista2)\n",
         "print(lista3mista)"
       ],
-      "execution_count": 44,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,12 +217,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "49241e8f-72cf-4c7e-9f10-4484f6a59149"
+        "outputId": "0fa2df84-77f1-4f5e-85bf-d2e3b533e83e"
       },
       "source": [
         "lista1"
       ],
-      "execution_count": 45,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,7 +234,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 6
         }
       ]
     },
@@ -260,12 +247,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "452d016f-4c87-4437-c516-4b64b8be5888"
+        "outputId": "74bd6758-9483-4778-8338-48bfafb539de"
       },
       "source": [
         "lista1[1]"
       ],
-      "execution_count": 46,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 7
         }
       ]
     },
@@ -293,12 +280,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "60f8764d-7f5b-4ca1-ab71-6b793f43bdf8"
+        "outputId": "d7b5ee3d-c089-4adf-9694-9c3a5ef8cda8"
       },
       "source": [
         "lista2[0:3]"
       ],
-      "execution_count": 47,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +297,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 8
         }
       ]
     },
@@ -323,12 +310,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "37bca1dd-ce06-4aa1-85a2-771b1ff07de6"
+        "outputId": "0835f6d6-1e62-4abe-cd5a-ea65a79e5bc9"
       },
       "source": [
         "lista3mista[0]"
       ],
-      "execution_count": 48,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +327,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 9
         }
       ]
     },
@@ -353,12 +340,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5ab0eef6-98c2-47a2-a4cf-d927caf99869"
+        "outputId": "a9b9b97a-bb46-4a92-d3f1-d737b016ece7"
       },
       "source": [
         "lista3mista[0][1]"
       ],
-      "execution_count": 49,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,22 +357,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 10
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KyZD9NGfoJzR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 49,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -396,7 +370,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "a4091473-7f43-4ed1-dec8-fbdd05f2622c"
+        "outputId": "b541e972-d5b2-4e0f-c538-30bd3a9609d5"
       },
       "source": [
         "listavazia = []\n",
@@ -408,7 +382,7 @@
         "print('\\nPrimeiro objeto da listavazia: {}'.format(listavazia[0]))\n",
         "print('Valor contido na posição 3 da lista que está na posição 1 da listavazia: {}'.format(listavazia[1][3]))"
       ],
-      "execution_count": 50,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +405,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "522ec832-2eb6-4690-eb8d-2e95f851455f"
+        "outputId": "0ab201e3-edd5-4cea-f9c1-68c8d372bc8d"
       },
       "source": [
         "listaIdade = [idade1,idade2]\n",
@@ -444,7 +418,7 @@
         "\n",
         "listaIdade"
       ],
-      "execution_count": 51,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +430,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 12
         }
       ]
     },
@@ -469,7 +443,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0f4c6a90-16f8-47f0-c958-150189ca0061"
+        "outputId": "a04147f4-328e-4d34-8d3d-5abc8724950a"
       },
       "source": [
         "listaSalarios = [salario1, salario2]\n",
@@ -478,7 +452,7 @@
         "\n",
         "listaSalarios"
       ],
-      "execution_count": 52,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +464,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 13
         }
       ]
     },
@@ -507,26 +481,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IIyNupHMrgO4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 52,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "QPicb52V33wz",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "de4cc212-9ad6-42c7-9da6-1e5e7625ef43"
+        "outputId": "5f6a0428-15ee-4da9-cbb6-57eadc459a2d"
       },
       "source": [
         "if listaIdade[3]>30:\n",
@@ -536,7 +497,7 @@
         "else:\n",
         "  print('o Valor da posição 3 da listaIdade é MENOR que 30')\n"
       ],
-      "execution_count": 53,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +527,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "a98d44f2-ca4a-4962-d80d-da17528a7712"
+        "outputId": "3cbc3b28-99c7-4b1a-f4c8-5bdd5478a8eb"
       },
       "source": [
         "listaIdade.append(31)\n",
@@ -580,7 +541,7 @@
         "  else:\n",
         "    print('{} é MAIOR que 30 e diferente de 32'.format(novavariavel))"
       ],
-      "execution_count": 54,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,13 +565,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "85eca37d-858b-477f-9fb7-726fb3640ea3"
+        "outputId": "41b7ad8f-7f30-45a4-b09a-519307c34bbe"
       },
       "source": [
         "for variavelposicao in range(0,4):\n",
-        "  print('imprimindo o valor:{}'.format(lista1[variavelposicao])) #lisat1[1]"
+        "  print('imprimindo o valor:{}'.format(lista1[variavelposicao])) #lista1[1]"
       ],
-      "execution_count": 55,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,6 +580,33 @@
             "imprimindo o valor:Bruna\n",
             "imprimindo o valor:Maria\n",
             "imprimindo o valor:João\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "lIabhDaB3lZ2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "626005fb-c284-474d-d779-591993f493a6"
+      },
+      "source": [
+        "for x in range(0,2):\n",
+        "  print('imprimindo o valor:{}'.format(listavazia[x])) #listavazia[1]"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "imprimindo o valor:['Lucas', 'Bruna', 'Maria', 'João', 'José']\n",
+            "imprimindo o valor:['Analista', 'Coordenador', 'Diretor', 'Especialista', 'Supervisor']\n"
           ],
           "name": "stdout"
         }
